<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layoutDescription="@xml/fragment_profile_scene"
        tools:context=".fragments.Profile">


        <Button
            android:id="@+id/profile_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture_button_action"
            app:layout_constraintBottom_toTopOf="@+id/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/profile_picture_content_description"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/right_answers"
            android:textColor="#228B22"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/right_answers_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <TextView
            android:id="@+id/right_answers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="XX" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/wrong_answers"
            android:textColor="#B22222"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/wrong_answers_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_answers_count" />

        <TextView
            android:id="@+id/wrong_answers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="XX" />

        <Button
            android:id="@+id/clear_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_data"
            app:layout_constraintBottom_toTopOf="@+id/share_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrong_answers_count" />

        <Button
            android:id="@+id/share_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_data_button" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.core.widget.NestedScrollView>